--- a/RedMstGUI.html
+++ b/RedMstGUI.html
@@ -56,17 +56,17 @@ span.Apple-tab-span {white-space:pre}
 <p class="p8"><span class="s4">RedMst</span>.quant= 8;</p>
 <p class="p9">RedMstGUI<span class="s2">(20);</span></p>
 <p class="p10"><br></p>
-<p class="p9">RedTrk<span class="s2">(</span></p>
+<p class="p9">RedTrack<span class="s2">(</span></p>
 <p class="p11"><span class="s2"><span class="Apple-tab-span">	</span></span>\bass<span class="s2">,</span></p>
 <p class="p8"><span class="Apple-tab-span">	</span><span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([0, 5], <span class="s4">inf</span>), <span class="s5">\octave</span>, 4),</p>
 <p class="p8"><span class="Apple-tab-span">	</span>#[0, 1, 2, 3]<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></p>
 <p class="p8">);</p>
-<p class="p9">RedTrk<span class="s2">(</span></p>
+<p class="p9">RedTrack<span class="s2">(</span></p>
 <p class="p11"><span class="s2"><span class="Apple-tab-span">	</span></span>\melody<span class="s2">,</span></p>
 <p class="p8"><span class="Apple-tab-span">	</span><span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([0, 5, 2, 3, 3, 1], <span class="s4">inf</span>), <span class="s5">\dur</span>, <span class="s4">Pseq</span>([0.25, 0.25, 0.5], <span class="s4">inf</span>)),</p>
 <p class="p8"><span class="Apple-tab-span">	</span>#[1, 2, 5]</p>
 <p class="p8">);</p>
-<p class="p9">RedTrk<span class="s2">(</span></p>
+<p class="p9">RedTrack<span class="s2">(</span></p>
 <p class="p11"><span class="s2"><span class="Apple-tab-span">	</span></span>\melody2<span class="s2">,</span></p>
 <p class="p8"><span class="Apple-tab-span">	</span><span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([7, 6, 4, 3], <span class="s4">inf</span>), <span class="s5">\dur</span>, 2, <span class="s5">\octave</span>, 6),</p>
 <p class="p8"><span class="Apple-tab-span">	</span>#[2, 3]</p>
