--- a/RedMstGUI3.html
+++ b/RedMstGUI3.html
@@ -46,17 +46,17 @@ span.Apple-tab-span {white-space:pre}
 <p class="p8"><span class="s5">RedMst</span>.quant= 8;</p>
 <p class="p9">RedMstGUI3<span class="s3">(20);</span></p>
 <p class="p10"><br></p>
-<p class="p9">RedTrk<span class="s3">(</span></p>
+<p class="p9">RedTrack<span class="s3">(</span></p>
 <p class="p11"><span class="s3"><span class="Apple-tab-span">	</span></span>\bass<span class="s3">,</span></p>
 <p class="p8"><span class="Apple-tab-span">	</span><span class="s5">Pbind</span>(<span class="s6">\degree</span>, <span class="s5">Pseq</span>([0, 5], <span class="s5">inf</span>), <span class="s6">\octave</span>, 4),</p>
 <p class="p8"><span class="Apple-tab-span">	</span>#[0, 1, 2, 3]<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></p>
 <p class="p8">);</p>
-<p class="p9">RedTrk<span class="s3">(</span></p>
+<p class="p9">RedTrack<span class="s3">(</span></p>
 <p class="p11"><span class="s3"><span class="Apple-tab-span">	</span></span>\melody<span class="s3">,</span></p>
 <p class="p8"><span class="Apple-tab-span">	</span><span class="s5">Pbind</span>(<span class="s6">\degree</span>, <span class="s5">Pseq</span>([0, 5, 2, 3, 3, 1], <span class="s5">inf</span>), <span class="s6">\dur</span>, <span class="s5">Pseq</span>([0.25, 0.25, 0.5], <span class="s5">inf</span>)),</p>
 <p class="p8"><span class="Apple-tab-span">	</span>#[1, 2, 5]</p>
 <p class="p8">);</p>
-<p class="p9">RedTrk<span class="s3">(</span></p>
+<p class="p9">RedTrack<span class="s3">(</span></p>
 <p class="p11"><span class="s3"><span class="Apple-tab-span">	</span></span>\melody2<span class="s3">,</span></p>
 <p class="p8"><span class="Apple-tab-span">	</span><span class="s5">Pbind</span>(<span class="s6">\degree</span>, <span class="s5">Pseq</span>([7, 6, 4, 3], <span class="s5">inf</span>), <span class="s6">\dur</span>, 2, <span class="s6">\octave</span>, 6),</p>
 <p class="p8"><span class="Apple-tab-span">	</span>#[2, 3]</p>
