--- a/RedSeq.html
+++ b/RedSeq.html
@@ -31,7 +31,7 @@ span.Apple-tab-span {white-space:pre}
 <p class="p3"><br></p>
 <p class="p1">simple way to control RedMst.</p>
 <p class="p2"><br></p>
-<p class="p4"><span class="s2">see also [<a href="RedMst.html"><span class="s3">RedMst</span></a>] [<a href="RedTrk.html"><span class="s3">RedTrk</span></a>] [<a href="RedTrk2.html"><span class="s3">RedTrk2</span></a>]</span></p>
+<p class="p4"><span class="s2">see also [<a href="RedMst.html"><span class="s3">RedMst</span></a>] [<a href="RedTrack.html"><span class="s3">RedTrack</span></a>] [<a href="RedTrack2.html"><span class="s3">RedTrack2</span></a>]</span></p>
 <p class="p5"><br></p>
 <p class="p6"><span class="Apple-tab-span">	</span><b>*new(indices, beats)</b></p>
 <p class="p6"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>indices - an array of sections</p>
@@ -50,10 +50,10 @@ span.Apple-tab-span {white-space:pre}
 <p class="p9"><span class="s4">RedMst</span>.clear;</p>
 <p class="p9"><span class="s4">RedMst</span>.clock= <span class="s4">TempoClock</span>(190/60);</p>
 <p class="p9"><span class="s4">RedMst</span>.quant= 4;</p>
-<p class="p9"><span class="s4">RedTrk</span>(<span class="s5">\intro</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([0, 4], <span class="s4">inf</span>)), #[0]);</p>
-<p class="p9"><span class="s4">RedTrk</span>(<span class="s5">\a</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([1, 4], <span class="s4">inf</span>)), #[1]);</p>
-<p class="p9"><span class="s4">RedTrk</span>(<span class="s5">\b</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([2, 4], <span class="s4">inf</span>)), #[2]);</p>
-<p class="p9"><span class="s4">RedTrk</span>(<span class="s5">\outro</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([-1, 0], <span class="s4">inf</span>)), #[3]);</p>
+<p class="p9"><span class="s4">RedTrack</span>(<span class="s5">\intro</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([0, 4], <span class="s4">inf</span>)), #[0]);</p>
+<p class="p9"><span class="s4">RedTrack</span>(<span class="s5">\a</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([1, 4], <span class="s4">inf</span>)), #[1]);</p>
+<p class="p9"><span class="s4">RedTrack</span>(<span class="s5">\b</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([2, 4], <span class="s4">inf</span>)), #[2]);</p>
+<p class="p9"><span class="s4">RedTrack</span>(<span class="s5">\outro</span>, <span class="s4">Pbind</span>(<span class="s5">\degree</span>, <span class="s4">Pseq</span>([-1, 0], <span class="s4">inf</span>)), #[3]);</p>
 <p class="p9">}</p>
 <p class="p9">)</p>
 <p class="p7"><br></p>
