--- a/RedMst.html
+++ b/RedMst.html
@@ -33,12 +33,12 @@ span.Apple-tab-span {white-space:pre}
 <p class="p1"><span class="s1"><b>RedMst<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></b></span><b>a sort of timeline - master controller</b></p>
 <p class="p2"><br></p>
 <p class="p2"><br></p>
-<p class="p1">RedMst controls track objects (RedTrk).<span class="Apple-converted-space">  </span>it does so by sending play and stop messages to them synced to a clock.<span class="Apple-converted-space">  </span>RedMst also has a global counter for sections.<span class="Apple-converted-space">  </span>if a track is not already playing and is activated to play for a certain section, it gets sent a play message when RedMst reaches that section, else the track is stopped.</p>
+<p class="p1">RedMst controls track objects (RedTrack).<span class="Apple-converted-space">  </span>it does so by sending play and stop messages to them synced to a clock.<span class="Apple-converted-space">  </span>RedMst also has a global counter for sections.<span class="Apple-converted-space">  </span>if a track is not already playing and is activated to play for a certain section, it gets sent a play message when RedMst reaches that section, else the track is stopped.</p>
 <p class="p1">The section counter is driven manually by user input (*next, *goto, etc) or by RedSeq.<span class="Apple-converted-space">  </span>all messages controlling playback (*next, *previous, *goto, *play, *stop) are scheduled to happen on the next quant beat.</p>
 <p class="p2"><br></p>
-<p class="p1">note: when you replace/overwrite a RedTrk as it is running, it will stop playing and not start until you goto a new RedMst section.</p>
+<p class="p1">note: when you replace/overwrite a RedTrack as it is running, it will stop playing and not start until you goto a new RedMst section.</p>
 <p class="p2"><br></p>
-<p class="p3"><span class="s2">see also [<a href="RedTrk.html"><span class="s3">RedTrk</span></a>], [<a href="RedTrk2.html"><span class="s3">RedTrk2</span></a>], [<a href="RedSeq.html"><span class="s3">RedSeq</span></a>], [<a href="RedGrandMst.html"><span class="s3">RedGrandMst</span></a>],</span></p>
+<p class="p3"><span class="s2">see also [<a href="RedTrack.html"><span class="s3">RedTrack</span></a>], [<a href="RedTrack2.html"><span class="s3">RedTrack2</span></a>], [<a href="RedSeq.html"><span class="s3">RedSeq</span></a>], [<a href="RedGrandMst.html"><span class="s3">RedGrandMst</span></a>],</span></p>
 <p class="p3"><span class="s2"><span class="Apple-tab-span">	</span>[<a href="RedMstGUI.html"><span class="s3">RedMstGUI</span></a>], [<a href="RedMstGUI2.html"><span class="s3">RedMstGUI2</span></a>], [<a href="RedMstGUI3.html"><span class="s3">RedMstGUI3</span></a>]</span></p>
 <p class="p4"><br></p>
 <p class="p5"><b><span class="Apple-tab-span">	</span>*play(startSection)</b></p>
@@ -57,7 +57,7 @@ span.Apple-tab-span {white-space:pre}
 <p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>stop and remove all tracks, reset section counter and stop the clock.<span class="Apple-converted-space">  </span>clears action function.</p>
 <p class="p4"><span class="Apple-tab-span">	</span></p>
 <p class="p5"><b><span class="Apple-tab-span">	</span>&lt;*tracks</b></p>
-<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>dictionary of all tracks.<span class="Apple-converted-space">  </span>tracks (RedTrk objects) add themselves here when created.</p>
+<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>dictionary of all tracks.<span class="Apple-converted-space">  </span>tracks (RedTrack objects) add themselves here when created.</p>
 <p class="p5"><b><span class="Apple-tab-span">	</span>&lt;&gt;*clock</b></p>
 <p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>master clock.<span class="Apple-converted-space">  </span>if not set TempoClock.default is used.</p>
 <p class="p5"><b><span class="Apple-tab-span">	</span>&lt;&gt;*quant</b></p>
@@ -81,7 +81,7 @@ span.Apple-tab-span {white-space:pre}
 <p class="p5"><b><span class="Apple-tab-span">	</span>*at(key)</b></p>
 <p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>returns track for key.</p>
 <p class="p5"><span class="Apple-tab-span">	</span><b>*add(trk)</b></p>
-<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>done automatically for all new instances of RedTrk.</p>
+<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>done automatically for all new instances of RedTrack.</p>
 <p class="p5"><span class="Apple-tab-span">	</span><b>*remove(trk)</b></p>
 <p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>usually done with *clear.<span class="Apple-converted-space">  </span>removes a track from master controller.</p>
 <p class="p4"><span class="Apple-tab-span">	</span></p>
@@ -99,17 +99,17 @@ span.Apple-tab-span {white-space:pre}
 <p class="p7"><span class="s4">RedMst</span><span class="s2">.clock= </span><span class="s4">TempoClock</span><span class="s2">(150/60);<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//create and set a new clock</p>
 <p class="p10"><span class="s4">RedMst</span>.quant= 4;<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s5">//set quant beat</span></p>
 <p class="p8"><br></p>
-<p class="p11">RedTrk<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span></p>
 <p class="p7"><span class="s2"><span class="Apple-tab-span">	</span></span><span class="s6">\bass</span><span class="s2">,<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//track name</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s4">Pbind</span>(<span class="s6">\degree</span>, <span class="s4">Pseq</span>([0, 5], <span class="s4">inf</span>), <span class="s6">\octave</span>, 4),<span class="Apple-tab-span">	</span><span class="s5">//track item</span></p>
 <p class="p7"><span class="s2"><span class="Apple-tab-span">	</span>#[0, 1, 2, 3]<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//track active sections (when to play)</p>
 <p class="p10">);</p>
-<p class="p11">RedTrk<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\melody<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s4">Pbind</span>(<span class="s6">\degree</span>, <span class="s4">Pseq</span>([0, 5, 2, 3, 3, 1], <span class="s4">inf</span>), <span class="s6">\dur</span>, <span class="s4">Pseq</span>([0.25, 0.25, 0.5], <span class="s4">inf</span>)),</p>
 <p class="p10"><span class="Apple-tab-span">	</span>#[1, 2, 5]</p>
 <p class="p10">);</p>
-<p class="p11">RedTrk<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\melody2<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s4">Pbind</span>(<span class="s6">\degree</span>, <span class="s4">Pseq</span>([7, 6, 4, 3], <span class="s4">inf</span>), <span class="s6">\dur</span>, 2, <span class="s6">\octave</span>, 6),</p>
 <p class="p10"><span class="Apple-tab-span">	</span>#[2, 3]</p>
@@ -157,12 +157,12 @@ span.Apple-tab-span {white-space:pre}
 <p class="p10">}).add;</p>
 <p class="p8"><br></p>
 <p class="p7">//--patterns</p>
-<p class="p7"><span class="s4">RedTrk</span><span class="s2">(</span><span class="s6">\hatSimple</span><span class="s2">, </span><span class="s4">Pbind</span><span class="s2">(<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//track name</p>
+<p class="p7"><span class="s4">RedTrack</span><span class="s2">(</span><span class="s6">\hatSimple</span><span class="s2">, </span><span class="s4">Pbind</span><span class="s2">(<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//track name</p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\instrument<span class="s2">, </span>\hat<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\dur</span>, <span class="s4">Pseq</span>([0.6, 0.4], <span class="s4">inf</span>),</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\amp</span>, <span class="s4">Pseq</span>([0.2, 0.5], <span class="s4">inf</span>)</p>
 <p class="p7"><span class="s2">), #[0, 1, 3, 4]);<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>//which sections track active</p>
-<p class="p11">RedTrk<span class="s2">(</span><span class="s6">\basIntro</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span><span class="s6">\basIntro</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\instrument<span class="s2">, </span>\bas<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\dur</span>, <span class="s4">Pseq</span>([0.6, 1, 1, 1, 0.4], <span class="s4">inf</span>),</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\amp</span>, 0.5,</p>
@@ -170,21 +170,21 @@ span.Apple-tab-span {white-space:pre}
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\degree</span>, <span class="s4">Pseq</span>([0, 5, 4, 5, 1], <span class="s4">inf</span>),</p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\octave<span class="s2">, 3</span></p>
 <p class="p10">), #[0, 3]);</p>
-<p class="p11">RedTrk<span class="s2">(</span><span class="s6">\padA</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span><span class="s6">\padA</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\instrument<span class="s2">, </span>\pad<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\dur</span>, <span class="s4">Pseq</span>([2, 3, 1, 1], <span class="s4">inf</span>),</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\amp</span>, 0.5,</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\degree</span>, <span class="s4">Pseq</span>([[0, 5], [0, 4], [3, 5], [3, 5]], <span class="s4">inf</span>),</p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\octave<span class="s2">, 4</span></p>
 <p class="p10">), #[1, 4]);</p>
-<p class="p11">RedTrk<span class="s2">(</span><span class="s6">\basA</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span><span class="s6">\basA</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\instrument<span class="s2">, </span>\bas<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\dur</span>, 1,</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\amp</span>, 0.5,</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\degree</span>, <span class="s4">Pseq</span>([<span class="s4">Pseq</span>([-3, -2, 2, 1], 3), -3, 1], <span class="s4">inf</span>),</p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\octave<span class="s2">, 3</span></p>
 <p class="p10">), #[1, 4]);</p>
-<p class="p11">RedTrk<span class="s2">(</span><span class="s6">\basBreak</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span><span class="s6">\basBreak</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\instrument<span class="s2">, </span>\bas<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\dur</span>, 4,</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\amp</span>, 0.4,</p>
@@ -192,12 +192,12 @@ span.Apple-tab-span {white-space:pre}
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\octave</span>, [3, 4],</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\strum</span>, 0.1</p>
 <p class="p10">), #[2]);</p>
-<p class="p11">RedTrk<span class="s2">(</span><span class="s6">\hatBreak</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span><span class="s6">\hatBreak</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\instrument<span class="s2">, </span>\hat<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\dur</span>, <span class="s4">Pseq</span>([0.2, 0.2, 0.2, 0.4], <span class="s4">inf</span>),</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\amp</span>, <span class="s4">Pseq</span>([0.5, 0.3, 0.3, 0.5], <span class="s4">inf</span>)</p>
 <p class="p10">), #[2]);</p>
-<p class="p11">RedTrk<span class="s2">(</span><span class="s6">\padTrem</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
+<p class="p11">RedTrack<span class="s2">(</span><span class="s6">\padTrem</span><span class="s2">, </span>Pbind<span class="s2">(</span></p>
 <p class="p12"><span class="s2"><span class="Apple-tab-span">	</span></span>\instrument<span class="s2">, </span>\pad<span class="s2">,</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\dur</span>, <span class="s4">Pseq</span>([0.2, 0.2, 0.2, 0.4], <span class="s4">inf</span>),</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="s6">\amp</span>, <span class="s4">Pseq</span>([0.5, 0.3, 0.3, 0.5], <span class="s4">inf</span>),</p>
@@ -263,21 +263,21 @@ span.Apple-tab-span {white-space:pre}
 <p class="p10">n= <span class="s4">RedXM</span>.read(<span class="s7">"~/mods/4-mat_-_rose.xm"</span>).prepareForPlay;</p>
 <p class="p8"><br></p>
 <p class="p7">//--tracks</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\steady</span>, <span class="s4">Pbind</span>(<span class="s6">\legato</span>, 0.1, <span class="s6">\freq</span>, 800), #[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test01</span>, a, #[1]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test02</span>, b, #[2]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test03</span>, c, #[3]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test04</span>, d, #[4]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test05</span>, e, #[5]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test06</span>, f, #[6]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test07</span>, g, #[7]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test08</span>, h, #[8]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test09</span>, i, #[9]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test10</span>, j, #[10]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test11</span>, k, #[11]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test12</span>, l, #[12]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test13</span>, m, #[13]);</p>
-<p class="p10"><span class="s4">RedTrk</span>(<span class="s6">\test14</span>, n, #[14]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\steady</span>, <span class="s4">Pbind</span>(<span class="s6">\legato</span>, 0.1, <span class="s6">\freq</span>, 800), #[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test01</span>, a, #[1]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test02</span>, b, #[2]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test03</span>, c, #[3]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test04</span>, d, #[4]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test05</span>, e, #[5]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test06</span>, f, #[6]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test07</span>, g, #[7]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test08</span>, h, #[8]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test09</span>, i, #[9]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test10</span>, j, #[10]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test11</span>, k, #[11]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test12</span>, l, #[12]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test13</span>, m, #[13]);</p>
+<p class="p10"><span class="s4">RedTrack</span>(<span class="s6">\test14</span>, n, #[14]);</p>
 <p class="p10">}</p>
 <p class="p10">)</p>
 <p class="p8"><br></p>
