--- a/RedMstGUI2.html
+++ b/RedMstGUI2.html
@@ -46,17 +46,17 @@ span.Apple-tab-span {white-space:pre}
 <p class="p7"><span class="s5">RedMst</span>.quant= 8;</p>
 <p class="p8">RedMstGUI2<span class="s6">(20);</span></p>
 <p class="p9"><br></p>
-<p class="p8">RedTrk<span class="s6">(</span></p>
+<p class="p8">RedTrack<span class="s6">(</span></p>
 <p class="p10"><span class="s6"><span class="Apple-tab-span">	</span></span>\bass<span class="s6">,</span></p>
 <p class="p7"><span class="Apple-tab-span">	</span><span class="s5">Pbind</span>(<span class="s7">\degree</span>, <span class="s5">Pseq</span>([0, 5], <span class="s5">inf</span>), <span class="s7">\octave</span>, 4),</p>
 <p class="p7"><span class="Apple-tab-span">	</span>#[0, 1, 2, 3]<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></p>
 <p class="p7">);</p>
-<p class="p8">RedTrk<span class="s6">(</span></p>
+<p class="p8">RedTrack<span class="s6">(</span></p>
 <p class="p10"><span class="s6"><span class="Apple-tab-span">	</span></span>\melody<span class="s6">,</span></p>
 <p class="p7"><span class="Apple-tab-span">	</span><span class="s5">Pbind</span>(<span class="s7">\degree</span>, <span class="s5">Pseq</span>([0, 5, 2, 3, 3, 1], <span class="s5">inf</span>), <span class="s7">\dur</span>, <span class="s5">Pseq</span>([0.25, 0.25, 0.5], <span class="s5">inf</span>)),</p>
 <p class="p7"><span class="Apple-tab-span">	</span>#[1, 2, 5]</p>
 <p class="p7">);</p>
-<p class="p8">RedTrk<span class="s6">(</span></p>
+<p class="p8">RedTrack<span class="s6">(</span></p>
 <p class="p10"><span class="s6"><span class="Apple-tab-span">	</span></span>\melody2<span class="s6">,</span></p>
 <p class="p7"><span class="Apple-tab-span">	</span><span class="s5">Pbind</span>(<span class="s7">\degree</span>, <span class="s5">Pseq</span>([7, 6, 4, 3], <span class="s5">inf</span>), <span class="s7">\dur</span>, 2, <span class="s7">\octave</span>, 6),</p>
 <p class="p7"><span class="Apple-tab-span">	</span>#[2, 3]</p>
